--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -10,6 +10,35 @@ html {
   background-color: wheat;
 }
 
+body {
+  width: 50%;
+  margin: 0 auto;
+}
+
 #clock {
   font-size: 3rem;
+}
+
+progress {
+  color:white;
+  border-radius: 8px;
+  border:2px solid black;
+  width: 100%;
+  height: 32px;
+}
+
+progress[value] {
+  color:pink;
+  border:2px solid black;
+}
+progress[value]::-webkit-progress-bar {
+  background-color: black;
+  border-radius: 8px;
+}
+progress[value]::-webkit-progress-value {
+  background: repeating-linear-gradient(-45deg, green 0px, yellow 5px, green 10px);
+  border-radius: 8px;
+}
+progress[value]::-moz-progress-bar {
+  color:red;
 }
