--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -53,7 +53,8 @@ progress[value]::-moz-progress-bar {
 }
 
 .digit-mins,
-.digit-secs {
+.digit-secs,
+.digit-percent {
   color: red;
   font-weight: bold;
 }
