--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -8,7 +8,7 @@
 html {
   font-size: 16px;
   font-family: 'Merriweather', sans-serif;
-  background-color: whitesmoke;
+  background-color: #333;
 }
 
 body {
@@ -22,6 +22,7 @@ body {
 }
 
 h1 {
+  color: white;
   padding-top: 2rem;
   text-align: center;
   margin-bottom: 3rem;
@@ -49,14 +50,16 @@ progress[value]::-webkit-progress-value {
   border-radius: 8px;
 }
 progress[value]::-moz-progress-bar {
-  color:red;
+  color:yellow;
 }
 
 .digit-mins,
 .digit-secs,
 .digit-percent {
-  color: red;
+  color: white;
+  text-shadow: 0px 0px 33px yellow;
   font-weight: bold;
+  font-family: 'Major Mono Display', monospace;
 }
 
 .digit-label {
