--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -21,6 +21,12 @@ body {
   text-align: center;
 }
 
+p.credit {
+  color: white;
+  font-size: 0.5rem;
+  text-align: center;
+}
+
 h1 {
   color: white;
   font-size: 4rem;
